# cpp_template_metaprogramming_exercises

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
src/: .#chapter2.hpp  CMakeLists.txt  Makefile  chapter2.hpp  cmake_install.cmake
test/: CMakeLists.txt  Makefile  chapter2_test.cpp  chapter2_test.cpp~  chapter2_test.hpp  cmake_install.cmake  template_exercises_test
